--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "jrmerz@ucdavis.edu",
   "license": "MIT",
   "dependencies": {
+    "@wordpress/block-library": "^7.0.2",
+    "@wordpress/blocks": "^11.2.2",
     "jsdom": "^19.0.0",
-    "node-fetch": "^3.2.0"
+    "node-fetch": "^3.2.0",
+    "striptags": "^3.2.0"
   }
 }
