--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@wordpress/block-library": "^7.0.2",
     "@wordpress/blocks": "^11.2.2",
+    "dotenv": "^16.0.0",
     "jsdom": "^19.0.0",
     "node-fetch": "^3.2.0",
     "striptags": "^3.2.0"
