--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.0",
     "jsdom": "^19.0.0",
     "node-fetch": "^3.2.0",
-    "striptags": "^3.2.0"
+    "striptags": "^3.2.0",
+    "xml2js": "^0.4.23"
   }
 }
