--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@google-cloud/storage": "^5.18.2",
     "@wordpress/block-library": "^7.0.2",
     "@wordpress/blocks": "^11.2.2",
+    "csv-stringify": "^6.0.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsdom": "^19.0.0",
