--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express": "^4.17.3",
     "jsdom": "^19.0.0",
     "node-fetch": "^3.2.0",
+    "parse-link-header": "^2.0.0",
     "striptags": "^3.2.0",
+    "ua-parser-js": "^1.0.2",
     "xml2js": "^0.4.23"
   }
 }
