initial collection post code

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@google-cloud/storage": "^5.18.2",
     "@wordpress/block-library": "^7.0.2",
     "@wordpress/blocks": "^11.2.2",
+    "btoa": "^1.2.1",
     "csv-parse": "^5.2.0",
     "csv-stringify": "^6.0.5",
     "dotenv": "^16.0.0",
